@@ -29,3 +29,16 @@
   // Note: Currently only used in 64 bit Windows implementations
   static bool register_code_area(char *low, char *high) { return true; }
 
+  // Atomically copy 64 bits of data
+  static void atomic_copy64(volatile void *src, volatile void *dst)
+  {
+#if defined(PPC) && !defined(_LP64)
+    double tmp;
+    asm volatile ("lfd  %0, 0(%1)\n"
+                  "stfd %0, 0(%2)\n"
+                  : "=f"(tmp)
+                  : "b"(src), "b"(dst));
+#else
+    *(jlong *) dst = *(jlong *) src;
+#endif // PPC && !_LP64
+  }
